<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.sap.sample.myapp.LoginActivity">

    <EditText
        android:id="@+id/txt_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_host">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_host"
        android:ems="10"
        android:hint="@string/lbl_port"></EditText>

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_port"
        android:ems="10"
        android:hint="@string/lbl_username" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:ems="10"
        android:hint="@string/lbl_password"
        android:inputType="text|textPassword" />

    <Button
        android:id="@+id/logon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_margin="10dip"
        android:text="@string/btn_logon" />

    <Button
        android:id="@+id/maf_logon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logon_button"
        android:layout_margin="10dip"
        android:text="@string/btn_maf_logon" />
</RelativeLayout>
